# prostate_neural_network

./: .gitattributes  .gitignore  README.md  augmentation  loader.py  preprocess_dataset.py  pyproject.toml  raw_data_loader.py  requirements.txt
config/: dataset.yaml
data/: alpha_sweep_results.csv  dataset_splits_shift.json  dataset_splits_strict_128.json  random_search_results.csv
models/: .gitignore  __init__.py  blocks.py  unet.py  unet2_5d.py
scripts/: alpha_sweep.py  analyze_runs.py  generate_splits.py  preprocess_adaptive.py  preprocess_dataset.py  preprocess_negatives.py
trainer/: dataset.py  losses.py  train.py  train_unet.py
utils/: loader.py  loader_adaptive.py  viewer.py
