[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "picai_pipeline"
version = "0.1.0"
description = "PI-CAI Prostate Cancer Segmentation Pipeline"
readme = "README.md"
requires-python = ">=3.10"

# You can leave dependencies blank here if you are already managing 
# them via requirements.txt, or you can migrate them here later.
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "models*", "trainer*", "config*", "scripts*"]
